# hints_service

./: .env.example  Dockerfile  README.md  pyproject.toml
hints_service/: constants.py  main.py  schemas.py
hints_service/api/endpoints/: hints.py
hints_service/services/: hints_generator.py
